--- a/Fincart/Base.lproj/Main.storyboard
+++ b/Fincart/Base.lproj/Main.storyboard
@@ -5065,7 +5065,7 @@ Recommends best suited mutual fund scheme to help you achieve your goals Buy mut
                         <outlet property="addImageView" destination="v95-VW-C71" id="mK2-cc-hn3"/>
                         <outlet property="amountDescriptionImageView" destination="lvd-NA-wtr" id="qbo-lt-wss"/>
                         <outlet property="amountDescriptionLabel" destination="hdP-cL-OBJ" id="MAb-4h-Bzn"/>
-                        <outlet property="amountDetailsTextField" destination="6xm-EK-iN5" id="oRS-Oq-xDc"/>
+                        <outlet property="amountDetailsTextField" destination="6xm-EK-iN5" id="qPb-LP-bV4"/>
                         <outlet property="amountSignLabel" destination="6cD-Sl-RV9" id="aeF-KK-QgP"/>
                         <outlet property="amountSubView" destination="5wj-iq-N0T" id="OfP-i8-tsl"/>
                         <outlet property="containerView" destination="QAv-l0-Kj0" id="tb4-U4-XwK"/>
@@ -5086,6 +5086,69 @@ Recommends best suited mutual fund scheme to help you achieve your goals Buy mut
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Ev-ge-f4q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4814" y="-1052"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7iD-DA-aZI">
+            <objects>
+                <viewController id="Nra-js-K5M" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="76l-tQ-UZL"/>
+                        <viewControllerLayoutGuide type="bottom" id="2qZ-xM-40G"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Chr-o6-8Rs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CHc-It-eOc">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCI-qg-hbl">
+                                        <rect key="frame" x="19" y="20" width="337.5" height="71"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_user_icon" translatesAutoresizingMaskIntoConstraints="NO" id="TAN-bG-cbt">
+                                                <rect key="frame" x="10" y="10" width="18" height="18"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="TAN-bG-cbt" secondAttribute="height" multiplier="1:1" id="DXl-BE-DPy"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fMW-mz-N8K">
+                                                <rect key="frame" x="48" y="8.5" width="42" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.30196078430000001" green="0.74901960779999999" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="fMW-mz-N8K" firstAttribute="leading" secondItem="TAN-bG-cbt" secondAttribute="trailing" constant="20" id="6yA-cU-C0W"/>
+                                            <constraint firstItem="TAN-bG-cbt" firstAttribute="top" secondItem="cCI-qg-hbl" secondAttribute="top" constant="10" id="ND6-OT-uQU"/>
+                                            <constraint firstItem="fMW-mz-N8K" firstAttribute="centerY" secondItem="TAN-bG-cbt" secondAttribute="centerY" id="PWZ-oh-w6D"/>
+                                            <constraint firstItem="TAN-bG-cbt" firstAttribute="height" secondItem="cCI-qg-hbl" secondAttribute="height" multiplier="0.25" id="TBd-Aa-pGX"/>
+                                            <constraint firstItem="TAN-bG-cbt" firstAttribute="leading" secondItem="cCI-qg-hbl" secondAttribute="leading" constant="10" id="cbO-wo-YBc"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="cCI-qg-hbl" firstAttribute="height" secondItem="CHc-It-eOc" secondAttribute="height" multiplier="0.11" id="X4X-IL-q1q"/>
+                                    <constraint firstItem="cCI-qg-hbl" firstAttribute="top" secondItem="CHc-It-eOc" secondAttribute="top" constant="20" id="bVv-jF-BG7"/>
+                                    <constraint firstItem="cCI-qg-hbl" firstAttribute="centerX" secondItem="CHc-It-eOc" secondAttribute="centerX" id="fJH-7Z-nbJ"/>
+                                    <constraint firstItem="cCI-qg-hbl" firstAttribute="width" secondItem="CHc-It-eOc" secondAttribute="width" multiplier="0.9" id="oOO-ai-Juh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="CHc-It-eOc" firstAttribute="leading" secondItem="Chr-o6-8Rs" secondAttribute="leading" id="7qg-v2-lW7"/>
+                            <constraint firstItem="2qZ-xM-40G" firstAttribute="top" secondItem="CHc-It-eOc" secondAttribute="bottom" id="FZc-9i-YNf"/>
+                            <constraint firstAttribute="trailing" secondItem="CHc-It-eOc" secondAttribute="trailing" id="Ldc-xh-Xld"/>
+                            <constraint firstItem="CHc-It-eOc" firstAttribute="top" secondItem="76l-tQ-UZL" secondAttribute="bottom" id="rUq-vE-Aeg"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NJo-0N-IOe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5613" y="-1102"/>
         </scene>
     </scenes>
     <resources>
